# infer-struct

./: .gitignore  README.org  pyproject.toml  shell.nix
.data/Network_raw_data_Ashkan/: network_118_nodes_Ybus_mag.csv  network_118_nodes_Ybus_theta.csv  network_118_nodes_ds.csv  network_118_nodes_pg.csv  network_118_nodes_pl.csv  network_118_nodes_qg.csv  network_118_nodes_ql.csv  network_118_nodes_vs.csv  network_145_nodes_Ybus_mag.csv  network_145_nodes_Ybus_theta.csv  network_145_nodes_ds.csv  network_145_nodes_pg.csv  network_145_nodes_pl.csv  network_145_nodes_qg.csv  network_145_nodes_ql.csv  network_145_nodes_vs.csv  network_14_nodes_Ybus_mag.csv  network_14_nodes_Ybus_theta.csv  network_14_nodes_ds.csv  network_14_nodes_pg.csv  network_14_nodes_pl.csv  network_14_nodes_qg.csv  network_14_nodes_ql.csv  network_14_nodes_vs.csv  network_2383_nodes_ds.csv  network_2383_nodes_pg.csv  network_2383_nodes_pl.csv  network_2383_nodes_qg.csv  network_2383_nodes_ql.csv  network_2383_nodes_vs.csv  network_300_nodes_Ybus_mag.csv  network_300_nodes_Ybus_theta.csv  network_300_nodes_ds.csv  network_300_nodes_pg.csv  network_300_nodes_pl.csv  network_300_nodes_qg.csv  network_300_nodes_ql.csv  network_300_nodes_vs.csv  network_30_nodes_Ybus_mag.csv  network_30_nodes_Ybus_theta.csv  (+38 more)
docs/: brainstorm1.org
infer_struct/: settings.py  util.py
infer_struct/data/: __init__.py  power_grid_example.py
notebooks/: Data.ipynb  Untitled.ipynb
test/: test_power_grid.py
