[tool.poetry]
name = "infer_struct"
version = "0.1.0"
description = "Infer the structure of networks"
authors = ["Ashkan Aleali <ashkan.aleali@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
toolz = "^0.11.1"
cytoolz = "^0.11.0"
fire = "^0.4.0"
networkx = "^2.5"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.12"
jupyterlab-theme-solarized-dark = "^2.0.0-alpha.1"
jupyterlab-vim = "^0.13.4"
jupyterlab-git = "^0.23.3"
bqplot = "^0.12.23"
ipympl = "^0.7.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.1"
black = "^20.8b1"
isort = "^5.8.0"
ipython-autotime = "^0.3.1"
nb-black = "^1.0.7"
pyplot-themes = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
